# LumiLuna

./: .gitignore  CLAUDE.md  DELIVERY_ROADMAP.md  FVP_FEASIBILITY_ANALYSIS.md  README.md  analysis_options.yaml  debug-android-media-scan.md  debug-android-rust-compat.md  debug-epub-manifest-missing.md  debug-settings-build-syntax.md  debug-windows-stl1011.md  log (2).txt  pubspec.yaml
.dbg/: android-media-scan.env  epub-manifest-missing.env
.github/workflows/: build-windows.yml
.trae/documents/: epub-pdf-reader-fixes-plan.md  epub-pdf-reader-integration.md  frb_migration_plan.md  metadata_lazy_loading_and_thumbnails.md  pdf-epub-reading-fixes.md
.workbuddy/memory/: 2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md
android/: build.gradle.kts  gradle.properties
android/app/: build.gradle.kts
integration_test/: simple_test.dart
lib/: app.dart  main.dart
lib/l10n/: app_en.arb  app_zh.arb  l10n.dart
lib/models/: book_reading_state.dart  collection.dart  epub_html_model.dart  lyrics.dart  media_folder.dart  media_item.dart  media_metadata.dart  media_type.dart  playlist.dart  tag.dart
lib/providers/: collection_provider.dart  database_provider.dart  filter_provider.dart  folder_watcher_provider.dart  lyrics_provider.dart  (+11 more)
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: media_scan.rs  mod.rs
rust_builder/: pubspec.yaml
test/: category_database_test.dart  cross_language_scan_test.dart  epub_html_parser_test.dart  lyrics_parser_test.dart  media_item_test.dart  rust_scanner_service_test.dart
windows/: CMakeLists.txt
(+86 files in other folders)
