[package]
name = "lumiluna_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
xxhash-rust = { version = "0.8.17", features = ["std", "xxh3"] }
lofty = "0.22.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
